# EyePeaTeaVea

./: .env.example  .gitignore  ADMIN_INTERFACE.md  BUILD_INSTRUCTIONS.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  get_secret_str.py  pyproject.toml  requirements.txt  test_image_generation.py  test_placeholder_generation.sh
admin/: admin.js  index.html
frontend/: index.html  script.js  style.css
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/dashboards/json/: eyepeateavea.json
observability/grafana/provisioning/datasources/: datasources.yml
scripts/: README.md  cleanup_invalid_events.py  clone_tv_logos.sh  update_tv_logos.sh
src/: admin.py  admin_auth.py  catalog_utils.py  epg_parser.py  image_processor.py  m3u_parser.py  main.py  models.py  observability.py  redis_store.py  scheduler.py  utils.py
stremio_addon/api/: main.py  security.py
stremio_addon/core/: config.py  lock.py
stremio_addon/db/: crud.py  database.py  models.py  redis_database.py
stremio_addon/parser/: playlist_parser.py
stremio_addon/scheduler/: jobs.py
stremio_addon/utils/: crypto.py  poster.py  validation_helper.py
tests/: test_api_integration.py  test_catalog_utils.py  test_epg_parser.py  test_image_processor.py  test_m3u_parser.py  test_redis_connection.py  test_redis_store.py  test_scheduler.py  test_utils.py
user_dashboard/: dashboard.js  index.html
