[project]
name = "EyePeaTeaVea"
version = "1.0.0"
description = "Live TV channels and events from user curated playlists"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Michael Lynch", email = "lynchmv+stremio@gmail.com" }
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "beanie",
    "motor",
    "httpx",
    "m3u-ipytv",
    "dateparser",
    "apscheduler",
    "python-dateutil",
    "pycryptodome",
    "gunicorn",
    "redis[hiredis]",
    "aiohttp",
    "aiohttp-socks",
    "Pillow"
]

[tool.uv]
# This section can be used for uv-specific configurations if needed later.

